Concurrency refactoring complete + new log list